kubernetes/services/octopus-deploy/gateway-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: octopus-deploy-gw
  annotations:
    external-dns.alpha.kubernetes.io/hostname: octopus.cloud.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: unifi-home.homelab.danmanners.com
